service-neg.yml
# service Nodeport as backend ##
apiVersion: v1
kind: Service
metadata:
  name: node-web
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates an NEG native LB Container after an Ingress is created
  labels:
    app: node-web
spec:
  selector:
    app: node-web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
