deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: zeus
  name: production-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 5
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: production-frontend 
  template:
    metadata:
      labels:
        app: production-frontend
        env: production
    spec:
      containers:
      - name: production-frontend
        image: nginxdemos/nginx-hello:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
            requests:
               cpu: "100m"
               memory: "200Mi"
            limits:
               cpu: "500m"
               memory: "600Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 8
        livenessProbe:
           httpGet:
             path: /
             port: 8080
           initialDelaySeconds: 15
           periodSeconds: 8
        lifecycle: # zero-downtime for rolling deployment
          preStop:
            exec:
              command: ["sh", "-c", "sleep 8"]      
---
# service
apiVersion: v1
kind: Service
metadata:
  namespace: zeus
  name: production-frontend
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates an NEG native LB Container after an Ingress is created
    cloud.google.com/backend-config: '{"ports": {"80":"production-frontend"}}'
  labels:
    app: production-frontend
spec:
  type: ClusterIP
  selector:
    app: production-frontend
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
---
# ingress gce
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: zeus
  name: production-frontend
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "production-zeus"  # config for global static IP public
    networking.gke.io/managed-certificates: "production-managed-cert-1"
    networking.gke.io/v1beta1.FrontendConfig: "production-frontend"
spec:
  rules:
    - host: "abdi-test.lemonilo.com"
      http:
        paths:
        - path: "/*"
          pathType: ImplementationSpecific # (Exact,Prefix or ImplementationSpecific)
          backend:
            service:
              name: production-frontend
              port:
                number: 8080
