ingress.yaml
## Ingress LB GCP global loadbalancer with Static external IP public + SSL managed by GCP ##
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ip-abdi-gcp"  # config for global static IP public
    ingress.gcp.kubernetes.io/pre-shared-cert: "abdi-ssl"  # config for ssl managed by gcp
    ## create ip public via gcp console and add name ip ##
    # gcloud beta compute --project=xxxx addresses create ip-abdi-gcp --global --network-tier=PREMIUM
    ## create ssl for ingress ##
    # gcloud beta compute ssl-certificates create abdi-ssl --domains gke-test.abdi.ai
spec:
  rules:
    - host: gke-test.abdi.ai
      http:
        paths:
        - backend:
            serviceName: node-web
            servicePort: 80
